--- a/machine.html
+++ b/machine.html
@@ -67,7 +67,11 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://snap.hr/popsa/job/software-engineer-data-and-machine-learning/60f377ba6a24a9a49eb68e1758c26d4d/'>Software Engineer ? Data and Machine Learning at Popsa</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698610581-senior-technical-product-manager-machine-learning-data-platform-team'>Visa Senior Technical Product Manager, Machine Learning - Data Platform Team | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Palo Alto, CA</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/popsa/job/software-engineer-data-and-machine-learning/60f377ba6a24a9a49eb68e1758c26d4d/'>Software Engineer ? Data and Machine Learning at Popsa</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -119,7 +123,7 @@
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.featurespace.com/careers/machine-learning-engineer/'>Machine Learning Engineer | Featurespace</a></h5> 
+<h5><a href='https://www.featurespace.com/careers/machine-learning-engineer/'>Machine Learning Engineer | Featurespace</a></h5> 
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -156,7 +160,7 @@ learning and computer vision to join our team.</p>
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Zestyai/743999698444359-machine-learning-engineer'>zesty.ai Machine Learning Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Zestyai/743999698444359-machine-learning-engineer'>zesty.ai Machine Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -201,11 +205,11 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698269592-machine-learning-engineer'>Tradeshift Machine Learning Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698269592-machine-learning-engineer'>Tradeshift Machine Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698266263-computer-vision-machine-learning-engineer-engineering-center-cluj'>Bosch Group Computer Vision & Machine Learning Engineer, Engineering Center Cluj | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698266263-computer-vision-machine-learning-engineer-engineering-center-cluj'>Bosch Group Computer Vision & Machine Learning Engineer, Engineering Center Cluj | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -297,7 +301,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Montreal, Canada  Montreal</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/optimusride/cb2790e0-9b59-4ae0-b018-5ec4a08ea923'>Optimus Ride - Software Engineer - Machine Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/optimusride/cb2790e0-9b59-4ae0-b018-5ec4a08ea923'>Optimus Ride - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light">Boston, MA  Boston</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -313,12 +317,12 @@ healthcare?...</p>
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/blueground/j/DDD85686B3/apply/'>Senior Machine Learning Scientist (Remote Possible) - Blueground</a></h5> 
+<h5><a href='https://apply.workable.com/blueground/j/DDD85686B3/apply/'>Senior Machine Learning Scientist (Remote Possible) - Blueground</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 8, 2019 ... At Blueground, our vision is to make people feel at home wherever they choose 
 to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/machine-learning-engineer-12731'>Machine Learning Engineer - Neiman Marcus Group Careers Careers</a></h5> 
+<h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/machine-learning-engineer-12731'>Machine Learning Engineer - Neiman Marcus Group Careers Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -326,7 +330,7 @@ to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...
 <p><span class="badge badge-light">Bellevue  Bellevue  Bellevue</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/incloudcounsel/jobs/4385899002'>Job Application for Machine Learning Research Scientist at InCloudCounsel</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/incloudcounsel/jobs/4385899002'>Job Application for Machine Learning Research Scientist at InCloudCounsel</a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -380,7 +384,7 @@ optimize deep learning models for efficient inference. These optimizations are?.
 Machine Learning Scientists to explore and understand the latest in AI, NLP, and 
 ML;?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=0870e50c1'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=0870e50c1'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -455,7 +459,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Sunnyvale  ?  Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/mercycorps/job/oMunbfwy'>Mercy Corps Careers - Consultant  - Software Engineering for Android Flutter App with Firebase ML Kit and Machine Learning Experience - Remote</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/mercycorps/job/oMunbfwy'>Mercy Corps Careers - Consultant  - Software Engineering for Android Flutter App with Firebase ML Kit and Machine Learning Experience - Remote</a></h5> 
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -480,17 +484,13 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/pager/jobs/1913530'>Job Application for Machine Learning Engineer at Pager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/pager/jobs/1913530'>Job Application for Machine Learning Engineer at Pager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 11, 2019 ... Opportunity. Pager is looking to hire a Machine Learning Engineer to build and 
 deploy Machine Learning models into the company's core services. You'll be?...</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/sumologic/jobs/1916902'>Job Application for Senior Software Engineer - Machine Learning (SSE-1/SSE-2) at Sumo Logic</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
-<p>Posted on: 2019-10-19</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idalab.softgarden.io/job/5132937/Machine-Learning-Engineer-for-Drug-Development-at-HotSpot-Therapeutics-m-f-d-?jobDbPVId=14043567&amp;l=en'>Machine Learning Engineer for Drug Development at HotSpot Therapeutics (m/f/d) at idalab GmbH | softgarden</a></h5> 
-<p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
 
