--- a/product-manager.html
+++ b/product-manager.html
@@ -40,20 +40,36 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
+<h5><a href='https://producthire.net/job/sr-product-manager-big-data-platform/'>Sr. Product Manager, Big Data Platform | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boh.referrals.selectminds.com/jobs/cash-management-product-manager-3967'>Cash Management Product Manager - Bank of Hawaii Careers</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698611056-senior-technical-product-manager-big-data-data-platform-team'>Visa Senior Technical Product Manager, Big Data - Data Platform Team | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Palo Alto, CA</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698610581-senior-technical-product-manager-machine-learning-data-platform-team'>Visa Senior Technical Product Manager, Machine Learning - Data Platform Team | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Palo Alto, CA</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
+<p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/americaatwork/f8c2ae3a-693a-4fd1-a0b6-b4c141e3f408'>America At Work - Product Manager (copy)</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Alpharetta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='http://medbridge.applytojob.com/apply/am6o2wHuzq/Product-Manager-Mobile-Lehi-UT'>Product Manager - Mobile  (Lehi, UT) - MedBridge - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Seattle Lehi, UT     Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='http://medbridge.applytojob.com/apply/xkxzQYHiBd/Product-Manager-Mobile-Seattle-WA'>Product Manager - Mobile (Seattle, WA) - MedBridge - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Seattle, WASeattle Seattle, WASeattle, WA     Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://www.sonetjob.com/job/offer?id=43abe6eb2067e3ad&tc=jo-tw'>SonetJob | Offre d'emploi - Recherche et D?veloppement - Product Manager</a></h5> 
@@ -104,7 +120,7 @@
 <p><span class="badge badge-light">Montreal, Canada  Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999698595366-product-manager-h-f-'>Proprioo Product Manager (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999698595366-product-manager-h-f-'>Proprioo Product Manager (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">?le-de-France, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -112,7 +128,7 @@
 <p><span class="badge badge-light">Portland, OR  ?  Portland, Oregon New York City Chicago Los Angeles</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://kiperformance.join.com/jobs/474164-product-owner-m-f-x'>Job @ KI Group (Cologne): Product Owner (m/f/x) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kiperformance.join.com/jobs/474164-product-owner-m-f-x'>Job @ KI Group (Cologne): Product Owner (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">Cologne, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -120,7 +136,7 @@
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1940144'>Job Application for Sr. Product Manager  at ZipRecruiter</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1940144'>Job Application for Sr. Product Manager  at ZipRecruiter</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -172,7 +188,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698577414-product-manager-dps-risk-products'>Visa Product Manager, DPS Risk Products | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698577414-product-manager-dps-risk-products'>Visa Product Manager, DPS Risk Products | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -222,7 +238,7 @@
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://vertexinc.referrals.selectminds.com/jobs/product-manager-i-899'>Product Manager I - Vertex Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vertexinc.referrals.selectminds.com/jobs/product-manager-i-899'>Product Manager I - Vertex Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -230,7 +246,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dept/jobs/1935253'>Job Application for Senior Product Owner - Technology (m/w/div) at Dept</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dept/jobs/1935253'>Job Application for Senior Product Owner - Technology (m/w/div) at Dept</a></h5> 
 <p><span class="badge badge-light">Hamburg  Hamburg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -260,7 +276,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://whatfix101.recruiterbox.com/jobs/fk03o2r'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://whatfix101.recruiterbox.com/jobs/fk03o2r'>
     Senior Product Designer at Whatfix
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -378,7 +394,7 @@
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=ouNPafw0&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=n197oMwW'>Jobvite, Inc. Careers - Senior AI Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=ouNPafw0&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=n197oMwW'>Jobvite, Inc. Careers - Senior AI Product Manager</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -390,7 +406,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -434,25 +450,7 @@
 <p><span class="badge badge-light">London Tokyo</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://wpvip.com/careers/senior-product-designer-enterprise/'>Senior Product Designer, Enterprise - Enterprise WordPress hosting, support, and consulting - WordPress VIP</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/product-manager-for-japanese-market-tad-10049'>Product Manager for Japanese Market : TAD - Rakuten Careers</a></h5> 
-<p><span class="badge badge-light">Tokyo, Japan</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/prodigygame/f27729a7-68dc-4c77-9569-97cc4cb01c1f'>Prodigy Game - Product Designer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://joinoyster.recruitee.com/o/product-manager-acquisition'>
-      Product Manager (Acquisition) - Oyster Financial Inc 
-    </a></h5> 
-<p><span class="badge badge-light">Mexico Mexico</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
